2008-07-02 Stephen Hemminger <stephen.hemminger@vyatta.com>

	* bgp_table.{c,h}: (bgp_table_finish) Take a double pointer and 
	  scrub pointer in caller, so fixing double-free crashes seen
	  with route-server-client configuration.
	* *.c: Adjust all callers of bgp_table_finish

2008-07-02 Paul Jakma <paul.jakma@sun.com>

	* bgp_table.{c,h}: (bgp_node_delete, bgp_table_free) shouldn't be
	  exported.
	
2008-06-07 Paul Jakma <paul@jakma.org>

	* bgp_attr.{c,h}: (bgp_mp_{un,}reach_parse) export, for unit tests.
	* bgp_attr.c: (bgp_mp_reach_parse) Add logging. Tighten length test
	  to bounds check against the attribute length rather than the
	  stream length..

2008-06-01 jfletche@gmail.com 

	* bgp_attr.c: (bgp_attr_aspathlimit) fix silly bug in flags check
	  that was causing BGP to drop sessions if it received a
	  aspath-limit with partial set. Fixes bug #419.

2008-04-10 Denis Ovsienko

	* bgp_aspath.[ch]: (aspath_filter_exclude) New function allows
	  filtering out arbitrary ASns from AS_PATH attribute.
	* bgp_aspath.[ch]: (aspath_print_vty) Accept suffix to let calling
	  functions signal, if they want the separator or not.
	* bgp_route.c: (route_vty_out, route_vty_out_tmp, damp_route_vty_out,
	  flap_route_vty_out, route_vty_out_detail) Fix aspath_print_vty()
	  calls to have AS_PATH output nicely.
	* bgp_routemap.c: Introduce "set as-path exclude" route-map command
	  to employ new filtering functionality.

2008-03-13 Paul Jakma <paul.jakma@sun.com>

	* (various) Remove 0 entries from struct message's, unneeded due to
	  recent improvements in mes_lookup/LOOKUP.

2008-01-29 Jorge Boncompte <jorge@dti2.net>

	* bgp_network.c: (bgp_socket) IPv4-only version crashes if -l is not
	  used as address will be null.

2007-12-22 Paul Jakma <paul.jakma@sun.com>

	* Fix series of vulnerabilities reported by "Mu Security
	  Research Team", where bgpd can be made to crash by sending
	  malformed packets - requires that bgpd be configured with a
	  session to the peer.