@@ -1,3 +1,8 @@
+2008-07-02 MIYAJIMA Mitsuharu <miyajima.mitsuharu@anchor.jp>
+
+	* *.c: CMD_AS_RANGE was being used inside command strings, and thus
+	  not being expanded, fix by dequoting.
+
 2008-07-02 Stephen Hemminger <stephen.hemminger@vyatta.com>
 
 	* bgp_table.{c,h}: (bgp_table_finish) Take a double pointer and 
